# ivy_warehouse

./: .antigravityignore  .gitignore  Dockerfile  Documenten.lnk  README.md  dbt_project.yml  fix_bq_schemas.py  package-lock.yml  packages.yml  profiles.yml.template  pyproject.toml
.github/dbt/: profiles.yml
.github/workflows/: dbt_ci.yml
analyses/: profile_huds_nulls.sql  profile_huds_project_fields.sql  profile_huds_unmatched_projects.sql  profile_huds_uren_anomalies.sql  profile_project_periode_dupes.sql
flows/: dbt_flow.py  hubspot_flow.py  huds_api_flow.py  huds_flow.py  ingest_hubspot.py  pipeline.py
flows/ingestion/: hubspot.py  huds.py  huds_api.py
macros/: huds_parse_project.sql
models/marts/: dim_date.sql  dim_project.sql  dim_werknemers_intern.sql  fct_uren_omzet.sql  schema.yml
models/staging/: schema.yml  sources.yml  stg_hubspot_bedrijven.sql  stg_hubspot_contacten.sql  stg_huds_bedrijven.sql  stg_huds_facturatie_overzicht.sql  stg_huds_facturen.sql  stg_huds_projecten.sql  stg_huds_uren.sql  stg_huds_uren_omzet_planning.sql  stg_huds_uren_omzet_realisatie.sql  stg_huds_uurtarieven.sql  stg_huds_werknemers_intern.sql  stg_sheet_project_voortgang.sql
scratch/: inspect_facturen.py
seeds/: dim_feestdag.csv  dim_regio.csv  dim_team.csv
tests/: assert_planning_project_nummers_in_realisatie.sql
